[ROX-16581][SQF] Add capability to paginate by derived fields
