# central/graphql/resolvers/inputtypes/sort_option.go
@@ -1,13 +1,17 @@
 package inputtypes
 
 import (
+	"strings"
+
 	v1 "github.com/stackrox/rox/generated/api/v1"
+	"github.com/stackrox/rox/pkg/search/postgres/aggregatefunc"
 )
 
 // SortOption is the sort option input type.
 type SortOption struct {
-	Field    *string
-	Reversed *bool
+	Field       *string
+	Aggregation *string
+	Reversed    *bool
 }
 
 // AsV1SortOption converts the sort option to proto.
@@ -21,6 +25,13 @@ func (s *SortOption) AsV1SortOption() *v1.SortOption {
 				return ""
 			}
 			return *s.Field
+		}(),
+		Aggregation: func() v1.Aggregation {
+			if s.Aggregation == nil {
+				return v1.Aggregation_UNSET
+			}
+			aggrFunc := aggregatefunc.GetAggrFunc(strings.ToLower(*s.Aggregation))
+			return aggrFunc.Proto()
 		}(),
 		Reversed: func() bool {
 			if s.Reversed == nil {
