# generated/api/v1/pagination.pb.go
@@ -22,12 +22,45 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
+type Aggregation int32
+
+const (
+	Aggregation_UNSET Aggregation = 0
+	Aggregation_COUNT Aggregation = 1
+	Aggregation_MIN   Aggregation = 2
+	Aggregation_MAX   Aggregation = 3
+)
+
+var Aggregation_name = map[int32]string{
+	0: "UNSET",
+	1: "COUNT",
+	2: "MIN",
+	3: "MAX",
+}
+
+var Aggregation_value = map[string]int32{
+	"UNSET": 0,
+	"COUNT": 1,
+	"MIN":   2,
+	"MAX":   3,
+}
+
+func (x Aggregation) String() string {
+	return proto.EnumName(Aggregation_name, int32(x))
+}
+
+func (Aggregation) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_5993a9cae165a01a, []int{0}
+}
+
 type SortOption struct {
-	Field                string   `protobuf:"bytes,1,opt,name=field,proto3" json:"field,omitempty"`
-	Reversed             bool     `protobuf:"varint,2,opt,name=reversed,proto3" json:"reversed,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	Field    string `protobuf:"bytes,1,opt,name=field,proto3" json:"field,omitempty"`
+	Reversed bool   `protobuf:"varint,2,opt,name=reversed,proto3" json:"reversed,omitempty"`
+	// This field is under development. It is not supported on any REST APIs.
+	Aggregation          Aggregation `protobuf:"varint,3,opt,name=aggregation,proto3,enum=v1.Aggregation" json:"aggregation,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}    `json:"-"`
+	XXX_unrecognized     []byte      `json:"-"`
+	XXX_sizecache        int32       `json:"-"`
 }
 
 func (m *SortOption) Reset()         { *m = SortOption{} }
@@ -75,6 +108,13 @@ func (m *SortOption) GetReversed() bool {
 		return m.Reversed
 	}
 	return false
+}
+
+func (m *SortOption) GetAggregation() Aggregation {
+	if m != nil {
+		return m.Aggregation
+	}
+	return Aggregation_UNSET
 }
 
 func (m *SortOption) MessageClone() proto.Message {
@@ -168,6 +208,7 @@ func (m *Pagination) Clone() *Pagination {
 }
 
 func init() {
+	proto.RegisterEnum("v1.Aggregation", Aggregation_name, Aggregation_value)
 	proto.RegisterType((*SortOption)(nil), "v1.SortOption")
 	proto.RegisterType((*Pagination)(nil), "v1.Pagination")
 }
@@ -175,21 +216,25 @@ func init() {
 func init() { proto.RegisterFile("api/v1/pagination.proto", fileDescriptor_5993a9cae165a01a) }
 
 var fileDescriptor_5993a9cae165a01a = []byte{
-	// 220 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0x4f, 0x2c, 0xc8, 0xd4,
-	0x2f, 0x33, 0xd4, 0x2f, 0x48, 0x4c, 0xcf, 0xcc, 0x4b, 0x2c, 0xc9, 0xcc, 0xcf, 0xd3, 0x2b, 0x28,
-	0xca, 0x2f, 0xc9, 0x17, 0x62, 0x2a, 0x33, 0x54, 0xb2, 0xe3, 0xe2, 0x0a, 0xce, 0x2f, 0x2a, 0xf1,
-	0x2f, 0x00, 0x89, 0x0b, 0x89, 0x70, 0xb1, 0xa6, 0x65, 0xa6, 0xe6, 0xa4, 0x48, 0x30, 0x2a, 0x30,
-	0x6a, 0x70, 0x06, 0x41, 0x38, 0x42, 0x52, 0x5c, 0x1c, 0x45, 0xa9, 0x65, 0xa9, 0x45, 0xc5, 0xa9,
-	0x29, 0x12, 0x4c, 0x0a, 0x8c, 0x1a, 0x1c, 0x41, 0x70, 0xbe, 0x52, 0x36, 0x17, 0x57, 0x00, 0xdc,
-	0x5c, 0x90, 0xfe, 0x9c, 0xcc, 0xdc, 0xcc, 0x12, 0xb0, 0x7e, 0xd6, 0x20, 0x08, 0x47, 0x48, 0x8c,
-	0x8b, 0x2d, 0x3f, 0x2d, 0xad, 0x38, 0xb5, 0x04, 0xac, 0x9b, 0x35, 0x08, 0xca, 0x13, 0xd2, 0xe7,
-	0xe2, 0x2e, 0xce, 0x2f, 0x2a, 0x89, 0xcf, 0x07, 0x5b, 0x2e, 0xc1, 0xac, 0xc0, 0xa8, 0xc1, 0x6d,
-	0xc4, 0xa7, 0x57, 0x66, 0xa8, 0x87, 0x70, 0x52, 0x10, 0x57, 0x31, 0x9c, 0xed, 0xa4, 0x77, 0xe2,
-	0x91, 0x1c, 0xe3, 0x85, 0x47, 0x72, 0x8c, 0x0f, 0x1e, 0xc9, 0x31, 0xce, 0x78, 0x2c, 0xc7, 0xc0,
-	0x25, 0x91, 0x99, 0xaf, 0x57, 0x5c, 0x92, 0x98, 0x9c, 0x5d, 0x94, 0x5f, 0x01, 0xf1, 0x95, 0x5e,
-	0x62, 0x41, 0xa6, 0x5e, 0x99, 0x61, 0x14, 0x53, 0x99, 0x61, 0x12, 0x1b, 0x58, 0xc4, 0x18, 0x10,
-	0x00, 0x00, 0xff, 0xff, 0x99, 0x29, 0xff, 0x9d, 0x02, 0x01, 0x00, 0x00,
+	// 282 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x4c, 0x90, 0xc1, 0x4a, 0xc3, 0x30,
+	0x1c, 0xc6, 0x97, 0x8e, 0xce, 0xed, 0x5f, 0x98, 0x25, 0x88, 0x16, 0x0f, 0x65, 0xec, 0x34, 0x3c,
+	0xa4, 0x64, 0xe2, 0x03, 0x4c, 0xf1, 0xe0, 0xc1, 0x4e, 0xb2, 0x0d, 0xc4, 0x8b, 0x44, 0x97, 0x96,
+	0xb0, 0xb9, 0xc4, 0x34, 0x04, 0x1f, 0xc5, 0x47, 0xf2, 0xe8, 0x23, 0x48, 0x7d, 0x11, 0x69, 0x2b,
+	0xdd, 0x6e, 0xdf, 0xef, 0x23, 0xe4, 0xf7, 0x25, 0x70, 0xc6, 0xb5, 0x4c, 0x1c, 0x4d, 0x34, 0xcf,
+	0xe5, 0x8e, 0x5b, 0xa9, 0x76, 0x44, 0x1b, 0x65, 0x15, 0xf6, 0x1c, 0x1d, 0xbf, 0x03, 0x2c, 0x94,
+	0xb1, 0x73, 0x5d, 0xf5, 0xf8, 0x04, 0xfc, 0x4c, 0x8a, 0xed, 0x3a, 0x42, 0x23, 0x34, 0x19, 0xb0,
+	0x06, 0xf0, 0x39, 0xf4, 0x8d, 0x70, 0xc2, 0x14, 0x62, 0x1d, 0x79, 0x23, 0x34, 0xe9, 0xb3, 0x96,
+	0x31, 0x85, 0x80, 0xe7, 0xb9, 0x11, 0x79, 0x7d, 0x71, 0xd4, 0x1d, 0xa1, 0xc9, 0x70, 0x7a, 0x4c,
+	0x1c, 0x25, 0xb3, 0x7d, 0xcd, 0x0e, 0xcf, 0x8c, 0x37, 0x00, 0x0f, 0xed, 0x94, 0x4a, 0xb9, 0x95,
+	0x6f, 0xd2, 0xd6, 0x4a, 0x9f, 0x35, 0x80, 0x4f, 0xa1, 0xa7, 0xb2, 0xac, 0x10, 0xb6, 0x16, 0xfa,
+	0xec, 0x9f, 0x70, 0x02, 0x41, 0xa1, 0x8c, 0x7d, 0x56, 0xba, 0xd5, 0x05, 0xd3, 0x61, 0xa5, 0xdb,
+	0xbf, 0x82, 0x41, 0xd1, 0xe6, 0x8b, 0x2b, 0x08, 0x0e, 0x86, 0xe0, 0x01, 0xf8, 0xab, 0x74, 0x71,
+	0xbb, 0x0c, 0x3b, 0x55, 0xbc, 0x99, 0xaf, 0xd2, 0x65, 0x88, 0xf0, 0x11, 0x74, 0xef, 0xef, 0xd2,
+	0xd0, 0xab, 0xc3, 0xec, 0x31, 0xec, 0x5e, 0x93, 0xaf, 0x32, 0x46, 0xdf, 0x65, 0x8c, 0x7e, 0xca,
+	0x18, 0x7d, 0xfe, 0xc6, 0x1d, 0x88, 0xa4, 0x22, 0x85, 0xe5, 0xaf, 0x1b, 0xa3, 0x3e, 0x9a, 0xff,
+	0x23, 0x5c, 0x4b, 0xe2, 0xe8, 0x93, 0xe7, 0xe8, 0x4b, 0xaf, 0x6e, 0x2e, 0xff, 0x02, 0x00, 0x00,
+	0xff, 0xff, 0xd7, 0x8d, 0x5a, 0x52, 0x6c, 0x01, 0x00, 0x00,
 }
 
 func (m *SortOption) Marshal() (dAtA []byte, err error) {
@@ -215,6 +260,11 @@ func (m *SortOption) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	if m.XXX_unrecognized != nil {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
+	}
+	if m.Aggregation != 0 {
+		i = encodeVarintPagination(dAtA, i, uint64(m.Aggregation))
+		i--
+		dAtA[i] = 0x18
 	}
 	if m.Reversed {
 		i--
@@ -308,6 +358,9 @@ func (m *SortOption) Size() (n int) {
 	}
 	if m.Reversed {
 		n += 2
+	}
+	if m.Aggregation != 0 {
+		n += 1 + sovPagination(uint64(m.Aggregation))
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -424,6 +477,25 @@ func (m *SortOption) Unmarshal(dAtA []byte) error {
 				}
 			}
 			m.Reversed = bool(v != 0)
+		case 3:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Aggregation", wireType)
+			}
+			m.Aggregation = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowPagination
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.Aggregation |= Aggregation(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipPagination(dAtA[iNdEx:])
