# generated/api/v1/vuln_req_service.swagger.json
@@ -61,6 +61,20 @@
             "in": "query",
             "required": false,
             "type": "boolean"
+          },
+          {
+            "name": "pagination.sortOption.aggregation",
+            "description": "This field is under development. It is not supported on any REST APIs.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "UNSET",
+              "COUNT",
+              "MIN",
+              "MAX"
+            ],
+            "default": "UNSET"
           }
         ],
         "tags": [
@@ -555,6 +569,16 @@
       "default": "OBSERVED",
       "description": "VulnerabilityState indicates if vulnerability is being observed or deferred(/suppressed). By default, it vulnerabilities are observed."
     },
+    "v1Aggregation": {
+      "type": "string",
+      "enum": [
+        "UNSET",
+        "COUNT",
+        "MIN",
+        "MAX"
+      ],
+      "default": "UNSET"
+    },
     "v1ApproveVulnRequest": {
       "type": "object",
       "properties": {
@@ -690,6 +714,10 @@
         },
         "reversed": {
           "type": "boolean"
+        },
+        "aggregation": {
+          "$ref": "#/definitions/v1Aggregation",
+          "description": "This field is under development. It is not supported on any REST APIs."
         }
       }
     },
